# xfce4-fsguard-plugin

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/36x36/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  fsguard.c  fsguard.desktop.in  fsguard.desktop.in.in  green.xpm  icons.h  meson.build  red.xpm  unknown.xpm  yellow.xpm
panel-plugin/.xvpics/: gnome-question.xpm  green.xpm  red.xpm  unknown.xpm  yellow.xpm
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.gmo  ko.po  lo.po  (+35 more)
